Modify original style

--- a/Nginx-Fancyindex-Theme-dark/styles.css
+++ b/Nginx-Fancyindex-Theme-dark/styles.css
@@ -4,196 +4,231 @@
  * open-sourced under the MIT License, https://lbesson.mit-license.org/
  * hosted on GitHub, https://GitHub.com/Naereen/Nginx-Fancyindex-Theme
  */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');
 
 * {
-    font-family: 'Verdana', sans-serif;
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-	color: #61666c;
-	font-weight: 300;
-	font-size: 1em;
-	line-height: 2em;
+    color: #61666c;
+    font-weight: 300;
+    font-size: 1em;
+    line-height: 2em;
 }
 
 body {
-	margin: 0 auto;
-	padding-top: 20px;
-	max-width: 800px;
-	background-color: #2f343f;
-	color: #FFFFFF
+    margin: 0 auto;
+    padding-top: 20px;
+    max-width: 90%;
+    background-color: #1b1b1d;
+    color: #FFFFFF
 }
 
 thead {
-	font-weight: 200;
-	font-size: 1.2em;
+    font-weight: 200;
+    font-size: 1.2em;
 }
 
 h1 {
-	font-weight: 200;
-	text-align: center;
-	font-size: 1.4em;
-	line-height: 3em;
+    margin-top: 60px;
+    margin-bottom: 80px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.8);
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 24px;
 }
 
 a {
-	color: #FFFFFF;
-	text-decoration: none;
+    color: #FFFFFF;
+    text-decoration: none;
 }
+
 a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
+
 a.clear, a.clear:link, a.clear:visited {
-	color: #666;
-	padding: 2px 0;
-	font-weight: 400;
-	font-size: 14px;
-	margin: 0 0 0 20px;
-	line-height: 14px;
-	display: inline-block;
-	border-bottom: transparent 1px solid;
-	vertical-align: -10px;
-	-webkit-transition: all 300ms ease-in;
-	-moz-transition: all 300ms ease-in;
-	-ms-transition: all 300ms ease-in;
-	-o-transition: all 300ms ease-in;
-	transition: all 300ms ease-in;
+    color: #666;
+    padding: 2px 0;
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 0 20px;
+    line-height: 14px;
+    display: inline-block;
+    border-bottom: transparent 1px solid;
+    vertical-align: -10px;
+    -webkit-transition: all 300ms ease-in;
+    -moz-transition: all 300ms ease-in;
+    -ms-transition: all 300ms ease-in;
+    -o-transition: all 300ms ease-in;
+    transition: all 300ms ease-in;
 }
 
 input {
-	margin: 0 auto;
-	font-size: 100%;
-	vertical-align: middle;
-	*overflow: visible;
-	line-height: normal;
+    vertical-align: middle;
+    *overflow: visible;
     font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-	font-weight: 300;
-	line-height: 18px;
-	color: #555;
-	display: inline-block;
-	height: 20px;
-	padding: 4px 32px 4px 6px;
-	margin-bottom: 9px;
-	font-size: 14px;
-	line-height: 20px;
-	color: #555;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	width: 196px;
-	background-color: #fff;
-	border: 1px solid #ccc;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-	-webkit-transition: border linear .2s,box-shadow linear .2s;
-	-moz-transition: border linear .2s,box-shadow linear .2s;
-	-o-transition: border linear .2s,box-shadow linear .2s;
-	transition: border linear .2s,box-shadow linear .2s;
+    font-weight: 300;
+    display: inline-block;
+    border-radius: 2px;
+    height: 20px;
+    padding: 4px 0 4px 6px;
+    margin-bottom: 9px;
+    font-size: 13px;
+    line-height: 20px;
+    color: #555;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    width: 196px;
+    border: 1px solid #404343;
 }
+
 input:focus {
-	outline: 0;
-	border-color: rgba(0,0,0,0.8);
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
-	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
+    outline: 0;
+    border-color: rgba(255, 255, 255, 0.3);
 }
+
 input::-moz-focus-inner {
-	padding: 0;
-	border: 0;
+    padding: 0;
+    border: 0;
+}
+
+input::placeholder {
+    font-size: 12px;
+    color: #999;
 }
 
 #search {
-	color: #FFFFFF;
-	background-color: #262A32;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 250px;
-	margin-top: 20px;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
-	-webkit-appearance: textfield;
-	-webkit-transition: all 300ms ease-in;
-	-moz-transition: all 300ms ease-in;
-	-ms-transition: all 300ms ease-in;
-	-o-transition: all 300ms ease-in;
-	transition: all 300ms ease-in;
+    color: rgba(255, 255, 255, 0.75);
+    background-color: rgba(255, 255, 255, 0.02);
+    display: block;
+    margin-right: auto;
+    width: 250px;
+    max-width: 100%;
+    margin-top: 20px;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    -webkit-appearance: textfield;
 }
 
 table {
-	border-collapse: collapse;
-	font-size: 0.9em;
-	max-width: 100%;
-	margin: 20px auto 0;
+    border-collapse: collapse;
+    box-shadow: 0 0 0 1px #404343;
+    border-radius: 2px;
+    border-style: hidden;
+    font-size: 0.9em;
+    max-width: 100%;
+    margin: 20px auto 0;
+    width: 100%;
 }
 
 tr {
-	outline: 0;
-	border: 0;
+    outline: 0;
+    border: 0;
 }
-tr:hover td {
-	color: #FFFFFF;	
-	background: #3D4351;
+
+tbody tr:nth-child(even) {
+    background: #404343;
 }
+
 tr td:first-of-type {
-	padding-left: 10px;
-	padding-right: 10px;
+    padding-left: 40px;
+    padding-right: 10px;
 }
+
+tr td:last-child {
+    padding-right: 30px;
+}
+
 tr.parent a {
-	color: #9099A3;
+    color: #9099A3;
 }
 
 th {
+    text-align: left;
+    font-size: 12px;
+    padding-right: 20px;
+    font-weight: 400;
+}
 
-	text-align: left;
-	font-size: .75em;
-	padding-right: 20px;
+th a {
+    color: rgba(255, 2555, 255, 0.75);
 }
+
+th:first-child {
+    padding-left: 15px;
+}
+
+tr th:last-child {
+    padding-right: 24px;
+}
+
+thead tr:first-child {
+    border-bottom: 1px solid #404343;
+}
+
+tbody tr:first-child a {
+    color: #4ba4fe;
+}
+
 th + th {
-	width: 25%;
+    width: 25%;
 }
+
 th + th + th + th {
-	width: 5%;
+    width: 5%;
 }
 
 td {
-	padding: 5px 0;
-	outline: 0;
-	border: 0;
-	border-bottom: 1px solid #edf1f5;
-	vertical-align: middle;
-	text-align: left;
-	-webkit-transition: background 300ms ease-in;
-	-moz-transition: background 300ms ease-in;
-	-ms-transition: background 300ms ease-in;
-	-o-transition: background 300ms ease-in;
-	transition: background 300ms ease-in;
+    color: #FFFFFF;
+    outline: 0;
+    border: 0;
+    font-size: 12px;
+    vertical-align: middle;
+    text-align: left;
+    -webkit-transition: background 300ms ease-in;
+    -moz-transition: background 300ms ease-in;
+    -ms-transition: background 300ms ease-in;
+    -o-transition: background 300ms ease-in;
+    transition: background 300ms ease-in;
 }
-td:last-child,th:last-child {
-	text-align: right;
-	padding-right: 0;
+
+td:last-child, th:last-child {
+    text-align: right;
+    padding-right: 0;
 }
+
+tr td:first-child {
+    background-image: url("data:image/svg+xml,%3Csvg width= '16' height= '12' viewBox= '0 0 16 12' fill= 'none' xmlns= 'http://www.w3.org/2000/svg' %3E%3Cpath opacity= '0.4' d= 'M14.5 2H8.5L6.5 0H1.5C0.671562 0 0 0.671562 0 1.5V10.5C0 11.3284 0.671562 12 1.5 12H14.5C15.3284 12 16 11.3284 16 10.5V3.5C16 2.67156 15.3284 2 14.5 2Z' fill= 'white' /%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: 15px 50%;
+}
+
 td a {
-	display: block;
+    font-weight: 400;
+    display: block;
 }
 
 .parent a:hover {
-	color: #2a2a2a;
+    color: #2a2a2a;
 }
 
 footer {
-	font-size:12px;
-	text-align:center;
+    opacity: 0;
+    visibility: hidden;
+    font-size: 12px;
+    text-align: center;
 }
+
 footer a {
-	text-decoration: underline;
-	color:#FFFFFF;
+    text-decoration: underline;
+    color: #FFFFFF;
 }
